[package]
name = "Github-Saver"
version = "1.0.0"
edition = "2024"

[dependencies]
reqwest = { version = "0.13", features = ["blocking", "json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
crossterm = "0.29"
anyhow = "1.0"
unicode-width = "0.2"

[[bin]]
name = "github-saver"
path = "src/main.rs"
